# qu.guru_diploma

./: .gitignore  README.md  config.py  pyproject.toml
qa_guru_diploma_swagLabs_ui/pages/: cart_page.py  common.py  inventory_page.py  login_page.py
qa_guru_diploma_swagLabs_ui/utils/: attach.py
saucedemo_diploma_project_test/pages/: cart_page.py  common.py  inventory_page.py
saucedemo_test/data/: products.py
saucedemo_test/pages/: cart_page.py  common.py  inventory_page.py  login_page.py
saucedemo_test/utils/: helpers.py
swagLabs_ui_tests/pages/: cart_page.py  inventory_page.py
tests/: conftest.py  test_cart.py  test_inventory_page.py  test_login.py  test_saucedemo.py
tests/allure-results/: 059d599a-15f7-4cb3-86cc-a3c2e5f12636-result.json  8fc59022-eed8-431c-adfd-2cd477ff70e3-container.json
